reformed json format for map

--- a/analytics/random_forest_classifier.ipynb
+++ b/analytics/random_forest_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,21 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of rows: 49\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/Users/duer/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:24: DeprecationWarning: generator 'CouchDatabase.__iter__' raised StopIteration\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of rows: 49\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to train model: 0.339 seconds\n"
+      "Time to train model: 0.811 seconds\n"
      ]
     }
    ],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_data = unioin_df.toJSON()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -449,13 +458,57 @@
        "'{\"time\":\"29-04-2018 03:01:56\",\"lat\":-37.8136276,\"lng\":144.9630576,\"polarity\":0.0,\"followers\":3965,\"following\":4321,\"food\":\"pizza\"}'"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unioin_df.toJSON().first()"
+    "json_data.first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insert success\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insert data into couchdb\n",
+    "my_db = Couch('test000')\n",
+    "\n",
+    "final_json = {}\n",
+    "final_json[\"type\"] = \"FeatureCollection\"\n",
+    "final_json[\"features\"] = []\n",
+    "\n",
+    "for row in json_data.collect():\n",
+    "    \n",
+    "    entry = {}\n",
+    "    entry[\"type\"] = \"Feature\"\n",
+    "    entry[\"properties\"] = {}\n",
+    "    entry[\"geometry\"] = {}\n",
+    "    entry[\"geometry\"][\"type\"] = \"Point\"\n",
+    "    entry[\"geometry\"][\"coordinates\"] = []\n",
+    "    \n",
+    "    json_obj = json.loads(row)\n",
+    "    entry[\"properties\"][\"time\"] = json_obj[\"time\"]\n",
+    "    entry[\"properties\"][\"polarity\"] = json_obj[\"polarity\"]\n",
+    "    entry[\"properties\"][\"followers\"] = json_obj[\"followers\"]\n",
+    "    entry[\"properties\"][\"following\"] = json_obj[\"following\"]\n",
+    "    entry[\"properties\"][\"food\"] = json_obj[\"food\"]\n",
+    "    entry[\"geometry\"][\"coordinates\"].append(json_obj[\"lat\"])\n",
+    "    entry[\"geometry\"][\"coordinates\"].append(json_obj[\"lng\"])\n",
+    "    \n",
+    "    final_json[\"features\"].append(entry)\n",
+    "    \n",
+    "my_db.insert(final_json)"
    ]
   },
   {
