--- a/analytics/rf_model.ipynb
+++ b/analytics/rf_model.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to train food classifier: 1.844 seconds\n"
+      "Time to train food classifier: 2.004 seconds\n"
      ]
     }
    ],
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to train homeless regressor: 1.571 seconds\n"
+      "Time to train homeless regressor: 1.454 seconds\n"
      ]
     }
    ],
@@ -349,16 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Food classifier accuracy: 12.732%\n",
-      "Homeless regressor accuracy: 81.612%\n",
-      "Homeless trend regressor accuracy: 95.137%\n"
+      "Food classifier accuracy: 12.322%\n",
+      "Homeless regressor accuracy: 82.842%\n",
+      "Homeless trend regressor accuracy: 98.115%\n"
      ]
     }
    ],
@@ -381,6 +381,36 @@
     "print(\"Homeless regressor accuracy: %.3f%%\" % (homeless_acc * 100))\n",
     "print(\"Homeless trend regressor accuracy: %.3f%%\" % (homeless_trend_acc * 100))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area under Precision/Recall (PR) curve: 100\n",
+      "Area under Receiver Operating Characteristic (ROC) curve: 100.000\n",
+      "Time to evaluate model: 0.284 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluation that I have no idea what it is\n",
+    "from pyspark.mllib.evaluation import BinaryClassificationMetrics\n",
+    "\n",
+    "start_time = time()\n",
+    "\n",
+    "metrics = BinaryClassificationMetrics(labels_and_predictions_food)\n",
+    "print(\"Area under Precision/Recall (PR) curve: %.f\" % (metrics.areaUnderPR * 100))\n",
+    "print(\"Area under Receiver Operating Characteristic (ROC) curve: %.3f\" % (metrics.areaUnderROC * 100))\n",
+    "\n",
+    "end_time = time()\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(\"Time to evaluate model: %.3f seconds\" % elapsed_time)"
    ]
   },
   {
@@ -565,25 +595,25 @@
     "    concat_df_food = concat_df_food.withColumn('food', get_food_type_udf(concat_df_food['food_class']))\n",
     "    concat_df_food = concat_df_food.drop('food_class')\n",
     "\n",
-    "    unioin_df = df_all_info.union(concat_df_food)\n",
+    "    union_df = df_all_info.union(concat_df_food)\n",
     "else:\n",
-    "    unioin_df = df_all_info\n",
+    "    union_df = df_all_info\n",
     "    \n",
     "    \n",
     "if homeless_pre:\n",
     "    concat_df_homeless = concat_df_homeless.withColumn('food', get_food_type_udf(concat_df_homeless['food_class']))\n",
     "    concat_df_homeless = concat_df_homeless.drop('food_class')\n",
     "    \n",
-    "    unioin_df = unioin_df.union(concat_df_homeless)\n",
+    "    union_df = union_df.union(concat_df_homeless)\n",
     "\n",
     "    \n",
-    "unioin_df = unioin_df.drop('id')\n",
-    "unioin_df = unioin_df.drop('timestamp')\n",
+    "union_df = union_df.drop('id')\n",
+    "union_df = union_df.drop('timestamp')\n",
     "\n",
-    "unioin_df = unioin_df.withColumn('food_group', get_food_group_udf(unioin_df['food']))\n",
+    "union_df = union_df.withColumn('food_group', get_food_group_udf(union_df['food']))\n",
     "\n",
-    "print(unioin_df.count())\n",
-    "unioin_df.show()"
+    "print(union_df.count())\n",
+    "union_df.show()"
    ]
   },
   {
