--- a/analytics/rf_model.ipynb
+++ b/analytics/rf_model.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to train food classifier: 2.004 seconds\n"
+      "Time to train food classifier: 1.855 seconds\n"
      ]
     }
    ],
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to train homeless regressor: 1.454 seconds\n"
+      "Time to train homeless regressor: 1.610 seconds\n"
      ]
     }
    ],
@@ -349,16 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Food classifier accuracy: 12.322%\n",
-      "Homeless regressor accuracy: 82.842%\n",
-      "Homeless trend regressor accuracy: 98.115%\n"
+      "Food classifier accuracy: 12.240%\n",
+      "Homeless regressor accuracy: 80.219%\n",
+      "Homeless trend regressor accuracy: 98.224%\n"
      ]
     }
    ],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
      "text": [
       "Area under Precision/Recall (PR) curve: 100\n",
       "Area under Receiver Operating Characteristic (ROC) curve: 100.000\n",
-      "Time to evaluate model: 0.284 seconds\n"
+      "Time to evaluate model: 0.302 seconds\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -572,19 +572,19 @@
     "\n",
     "# get food group by food name\n",
     "def get_food_group(food):\n",
-    "        if food in Keywords.fastfood:\n",
-    "            return \"fastfood\"\n",
-    "        if food in Keywords.fruits:\n",
-    "            return \"fruits\"\n",
-    "        if food in Keywords.grains:\n",
-    "            return \"grains\"\n",
-    "        if food in Keywords.meat:\n",
-    "            return \"meat\"\n",
-    "        if food in Keywords.seafood:\n",
-    "            return \"seafood\"\n",
-    "        if food in Keywords.vegetables:\n",
-    "            return \"vegetables\"\n",
-    "        return None\n",
+    "    if food in Keywords.fastfood:\n",
+    "        return \"fastfood\"\n",
+    "    if food in Keywords.fruits:\n",
+    "        return \"fruits\"\n",
+    "    if food in Keywords.grains:\n",
+    "        return \"grains\"\n",
+    "    if food in Keywords.meat:\n",
+    "        return \"meat\"\n",
+    "    if food in Keywords.seafood:\n",
+    "        return \"seafood\"\n",
+    "    if food in Keywords.vegetables:\n",
+    "        return \"vegetables\"\n",
+    "    return None\n",
     "get_food_group_udf = udf(get_food_group, StringType())\n",
     "\n",
     "df_all_info = df_all_info.withColumn('food', get_food_type_udf(df_all_info['food_class']))\n",
@@ -618,16 +618,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_data = unioin_df.toJSON()"
+    "json_data = union_df.toJSON()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "'{\"time\":\"21-12-2015 04:19:48\",\"lat\":-37.82388645,\"lng\":145.06862749,\"polarity\":0.0,\"followers\":136,\"following\":110,\"homeless\":4,\"homeless_trend\":-9,\"food\":\"pork\",\"food_group\":\"meat\"}'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
