--- a/analytics/rf_model.ipynb
+++ b/analytics/rf_model.ipynb
@@ -6,6 +6,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "CCC Team 42, Melbourne\n",
+    "\n",
+    "Thuy Ngoc Ha    963370\n",
+    "Lan Zhou        824371\n",
+    "Zijian Wang     950618\n",
+    "Ivan Chee       736901\n",
+    "Duer Wang       824325\n",
+    "\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
+    "A ipythone notebook file used for demonstrating ml models\n",
+    "\n",
+    "Using random forest classification model for predicting food.\n",
+    "Using random forest regression model for predicting homeless and homeless trend.\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "import os\n",
     "os.environ['SPARK_HOME'] = \"spark\"\n",
@@ -47,7 +72,6 @@
     "from couch import Couch\n",
     "\n",
     "COUCHDB_NAME = \"cl_richard\"\n",
-    "#COUCHDB_NAME = \"classified1\"\n",
     "REFORMED_FILE = \"data/output0.csv\"\n",
     "\n",
     "food_dict = {}\n",
@@ -85,7 +109,7 @@
     "        # to ensure at least one of homeless info and food info appears\n",
     "        home = dic['homeless']\n",
     "        foods = dic['food_list']\n",
-    "        if home is None and foods is None:\n",
+    "        if (home is None) and (foods is None or len(foods) == 0):\n",
     "            continue\n",
     "        \n",
     "        # get homeless information\n",
